--- a/src/package.json
+++ b/src/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "debug": "^2.2.0",
+    "express": "^4.13.4",
+    "mongoose": "^4.4.5"
+  }
 }
