--- a/src/package.json
+++ b/src/package.json
@@ -4,15 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "browserify public/javascript/main.js -o public/javascript/bundle.js",
+    "watch": "watchify public/javascript/main.js -o public/javascript/bundle.js --debug --verbose",
+    "start": "npm run watch | nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^6.5.2",
     "body-parser": "^1.15.0",
+    "browserify": "^13.0.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.5"
+    "gulp-rename": "^1.2.2",
+    "mongoose": "^4.4.5",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-nodemon": "^2.0.6",
+    "reactify": "^1.1.1",
+    "watchify": "^3.7.0"
   }
 }
