--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "gulp-rename": "^1.2.2",
+    "moment": "^2.12.0",
     "mongoose": "^4.4.5",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
