--- a/src/package.json
+++ b/src/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "babel": "^6.5.2",
     "body-parser": "^1.15.0",
+    "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "gulp-rename": "^1.2.2",
+    "jquery": "^2.2.1",
     "moment": "^2.12.0",
     "mongoose": "^4.4.5",
     "react": "^0.14.7",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "vinyl-source-stream": "^1.1.0"
   },
