--- a/src/package.json
+++ b/src/package.json
@@ -26,6 +26,7 @@
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
+    "react-loader": "^2.2.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
