--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "jquery": "^2.2.1",
     "moment": "^2.12.0",
     "mongoose": "^4.4.5",
+    "node-schedule": "^1.1.0",
     "react": "^0.14.7",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
