--- a/src/package.json
+++ b/src/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "babel": "^6.5.2",
     "body-parser": "^1.15.0",
-    "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
     "gulp-rename": "^1.2.2",
-    "jquery": "^2.2.1",
     "moment": "^2.12.0",
     "mongoose": "^4.4.5",
     "node-schedule": "^1.1.0",
@@ -28,7 +26,8 @@
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-loader": "^2.2.0",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
